Resolve service files from applications folder

This efficively makes installing desktop files to `prefix/share/kglobalaccel` unnecessary.

BUG: 421329
FIXED-IN: 5.73

CC @marco @ngraham

Bug was introduced in e5fa5cbc4fa7ebb96a2ec7803e2963038e3bf1a6